app/src/main/kotlin/org/example/compiler/error/SyntaxError.kt
package org.example.compiler.error

open class SyntaxError protected constructor(val message: String)
